<resources>
    <string name="app_name">HabitHunter</string>
    <string name="title_stats">Statistics</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="habitErrorMessage">Error while adding the habit</string>

    <!-- String resources for custom habit layout file -->
    <string name="enter_name_of_habit">Enter name of habit</string>
    <string name="add_habit">Add habit</string>
    <string name="update_habit">Update habit</string>
    <string name="text_intervall">Intervall</string>
    <string name="text_goal">Goal</string>
    <string name="text_add_icon">Add icon</string>
    <string name="text_edit_icon">Edit icon</string>
    <string name="text_radio_button_daily">Daily</string>
    <string name="text_radio_button_weekly">Weekly</string>
    <string name="text_radio_button_monthly">Monthly</string>
    <string name="text_radio_button_amount">Amount</string>
    <string name="text_radio_button_time">Time</string>
    <string name="title_add_custom_habit">Your habit</string>
    <string name="message_enterAllFields">Please enter / select all fields</string>
    <string name="enter_notes_progress">Reflect here</string>
    <string name="textGoalInputHabit">Goal:</string>
    <string name="text_habit_finished">Habit finished</string>
    <string name="text_plus_1">+</string>
    <string name="text_minus_1">-</string>
    <string name="text_plus_5">+5</string>
    <string name="messageLoading">Please wait - Your habits are loading..</string>
    <string name="habitsNotFound">"No habits to display.. Start your habit journey right now :) "</string>
    <string name="bttn_add_habit">Add habit</string>
    <string name="bttn_log_out">Log Out</string>
    <string name="description_image">Image</string>
    <string name="text_login">Login</string>
    <string name="hint_text_email">Email</string>
    <string name="hint_text_password">Password</string>
    <string name="bttn_register">Register</string>
    <string name="bttn_login">Login</string>

    <string-array name="timeOptions">
        <item>seconds</item>
        <item>minutes</item>
        <item>hours</item>
    </string-array>

</resources>