<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_stats"
        android:name="org.othr.habithunter.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="org.othr.habithunter.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_addCustomHabitFragment"
            app:destination="@id/addCustomHabitFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.othr.habithunter.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/addCustomHabitFragment"
        android:name="org.othr.habithunter.ui.addCustomHabit.AddCustomHabitFragment"
        android:label="@string/title_add_custom_habit"
        tools:layout="@layout/fragment_add_custom_habit" />
    <fragment
        android:id="@+id/inputProgressHabit"
        android:name="org.othr.habithunter.ui.inputProgressHabit.inputProgressHabit"
        android:label="fragment_input_progress_habit"
        tools:layout="@layout/fragment_input_progress_habit" />
</navigation>