<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
    name="viewmodel"
    type="org.othr.habithunter.ui.addCustomHabit.AddCustomHabitViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addCustomHabit.AddCustomHabitFragment"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldHabitName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textHabitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily= "sans-serif"
            android:textSize = "15sp"
            android:text="@={viewmodel.observableHabit.habitTitle}"
            android:textStyle = "normal"
            android:letterSpacing="0.1"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_name_of_habit"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addCustomHabitBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="?attr/textAppearanceButton"
        android:text="@string/bttn_add_habit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <TextView
        android:id="@+id/textIntervall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intervall"
        android:textAppearance="?attr/textAppearanceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/textGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_goal"
        android:textAppearance="?attr/textAppearanceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/textAddIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_add_icon"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/fieldHabitName"
        app:layout_constraintVertical_bias="0.07999998" />

    <View
        android:id="@+id/dividerIntervall"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textIntervall"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/dividerGoal"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGoal"
        app:layout_constraintVertical_bias="0.0" />


    <RadioGroup
        android:id="@+id/radioGroupIntervall"
        android:checkedButton="@={viewmodel.observableRadioIntervallChecked}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <RadioButton
            android:id="@+id/radioButtonDaily"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_radio_button_daily"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <RadioButton
            android:id="@+id/radioButtonWeekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/text_radio_button_weekly" />

        <RadioButton
            android:id="@+id/radioButtonMonthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/text_radio_button_monthly" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/amountTimeRadioGroup"
        android:checkedButton="@={viewmodel.observableRadioAmountChecked}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57">

        <RadioButton
            android:id="@+id/radioButtonAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/text_radio_button_amount" />

        <RadioButton
            android:id="@+id/radioButtonTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/text_radio_button_time" />
    </RadioGroup>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldHabitName"
        app:layout_constraintVertical_bias="0.060000002" />

    <NumberPicker
        android:id="@+id/numberPickerAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:value="@={viewmodel.observableHabit.habitGoal}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/numberPickerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:visibility="invisible">

    </NumberPicker>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>